--- a/courses/index.html
+++ b/courses/index.html
@@ -30,7 +30,7 @@ Teaching – Suraj Rampure
 <hr />
 <h3 id="computer-science">Computer Science</h3>
 <ul>
-<li>W186: Databases (Spring 2019, in progress)</li>
+<li>W186: Databases (Spring 2019)</li>
 <li>189: Machine Learning (Spring 2018)</li>
 <li>174: Random Algorithms and Discrete Probability (Spring 2018)</li>
 <li>170: Efficient Algorithms and Intractable Problems (Fall 2017)</li>
@@ -48,7 +48,7 @@ Teaching – Suraj Rampure
 </ul>
 <h3 id="mathematics">Mathematics</h3>
 <ul>
-<li>113: Abstract Algebra (Spring 2019, in progress)</li>
+<li>113: Abstract Algebra (Spring 2019)</li>
 <li>53: Multivariable Calculus (Summer 2017)</li>
 <li>128A: Numerical Analysis (Spring 2017)</li>
 <li>110: Linear Algebra (Spring 2017)</li>
