--- a/teaching/index.html
+++ b/teaching/index.html
@@ -28,11 +28,21 @@ Teaching – Suraj Rampure
 <h1 id="teaching-suraj-rampure">Teaching – Suraj Rampure</h1>
 <p><a href="../index.html">Home</a>   <strong><a href="index.html">Teaching</a></strong>   <a href="../courses/index.html">Courses</a></p>
 <hr />
-<h3 id="cs-198-087-introduction-to-mathematical-thinking-decal-site">CS 198-087 – Introduction to Mathematical Thinking DeCal (<a href="http://imt-decal.org">site</a>)</h3>
-<p>All resources, including the <a href="http://notes.imt-decal.org">notes for the course</a> are on the course website, linked above.</p>
+<h3 id="cs-70-discrete-mathematics-and-probability-theory-site">CS 70 – Discrete Mathematics and Probability Theory (<a href="http://eecs70.org/">site</a>)</h3>
+<p>TA: Summer 2019 (head)</p>
+<ul>
+<li>Discussion: Monday and Tuesday, 4-5PM, Wheeler 30 (103) [<em>shared with Ryan Deng, who will typically teach Wednesday and Thursday</em>]</li>
+<li>OH: Tuesday, 11AM-1PM, Soda 411</li>
+</ul>
+<p>Fill out <a href="http://tinyurl.com/first70disc">this form</a> to tell me more about you!</p>
+<p><br></p>
+<p><strong>Resources from this semester:</strong></p>
+<ul>
+<li><a href="https://drive.google.com/drive/folders/1-D34Yk71SkphvUK7YATGz1-MHBPlY_VW?usp=sharing">Discussion notes</a></li>
+</ul>
 <hr />
 <h3 id="data-100-principles-and-techniques-of-data-science-site">Data 100 – Principles and Techniques of Data Science (<a href="http://ds100.org">site</a>)</h3>
-<p>TA: Spring 2019, Fall 2018</p>
+<p>TA: Spring 2019 (head), Fall 2018 (head)</p>
 <ul>
 <li>Lab: Tuesday, 12-1PM and 1-2PM, Evans B6 (111 and 115)</li>
 <li>Discussion: Friday, 12-1PM and 1-2PM, Etcheverry (108 and 113)</li>
@@ -108,6 +118,9 @@ Teaching – Suraj Rampure
 <li><a href="../resources/ds100/sigmoid.html">Derivation of the Sigmoid Function</a> (SP19)</li>
 <li><a href="../resources/ds100/infinity_parameters_logistic.html">Parameters Diverging to Infinity in Logistic Regression</a> (SP19)</li>
 </ul>
+<hr />
+<h3 id="cs-198-087-introduction-to-mathematical-thinking-decal-site">CS 198-087 – Introduction to Mathematical Thinking DeCal (<a href="http://imt-decal.org">site</a>)</h3>
+<p>All resources, including the <a href="http://notes.imt-decal.org">notes for the course</a> are on the course website, linked above.</p>
 <hr />
 <h3 id="cs-61a-structure-and-interpretation-of-computer-programs-site">CS 61A – Structure and Interpretation of Computer Programs (<a href="http://cs61a.org">site</a>)</h3>
 <p>TA: Spring 2018</p>
