--- a/teaching/index.html
+++ b/teaching/index.html
@@ -36,9 +36,13 @@ Teaching – Suraj Rampure
 </ul>
 <p>Fill out <a href="http://tinyurl.com/first70disc">this form</a> to tell me more about you!</p>
 <p><br></p>
-<p><strong>Resources from this semester:</strong></p>
+<p><strong>Resources:</strong></p>
 <ul>
-<li><a href="https://drive.google.com/drive/folders/1-D34Yk71SkphvUK7YATGz1-MHBPlY_VW?usp=sharing">Discussion notes</a></li>
+<li><a href="https://drive.google.com/drive/folders/1-D34Yk71SkphvUK7YATGz1-MHBPlY_VW?usp=sharing">Discussion notes (shared with Ryan Deng)</a></li>
+<li><a href="http://notes.imt-decal.org">Introduction to Mathematical Thinking DeCal notes</a>
+<ul>
+<li>Note: These were written for a different course, but you may still find them useful.</li>
+</ul></li>
 </ul>
 <hr />
 <h3 id="data-100-principles-and-techniques-of-data-science-site">Data 100 – Principles and Techniques of Data Science (<a href="http://ds100.org">site</a>)</h3>
