--- a/courses/index.html
+++ b/courses/index.html
@@ -1,6 +1,6 @@
 <p><br></p>
 <title>
-Teaching – Suraj Rampure
+Courses – Suraj Rampure
 </title>
 <head>
 <meta charset="utf-8">
@@ -30,6 +30,7 @@ Teaching – Suraj Rampure
 <hr />
 <h3 id="computer-science">Computer Science</h3>
 <ul>
+<li>61C: Great Ideas in Computer Architecture (in progress, Fall 2019)</li>
 <li>W186: Databases (Spring 2019)</li>
 <li>189: Machine Learning (Spring 2018)</li>
 <li>174: Random Algorithms and Discrete Probability (Spring 2018)</li>
@@ -48,6 +49,7 @@ Teaching – Suraj Rampure
 </ul>
 <h3 id="mathematics">Mathematics</h3>
 <ul>
+<li>115: Number Theory (in progress, Fall 2019)</li>
 <li>113: Abstract Algebra (Spring 2019)</li>
 <li>53: Multivariable Calculus (Summer 2017)</li>
 <li>128A: Numerical Analysis (Spring 2017)</li>
