--- a/index.html
+++ b/index.html
@@ -26,23 +26,38 @@ Suraj Rampure
 <script type='text/javascript' src='http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML'></script>
 </head>
 <div data-align="center">
-<p><img src='resources/pictures/lake.gif' width=200></p>
+<p><a href="resources/pictures/me_dancing.gif"><img src='resources/pictures/miscircle.png' width=200></a></p>
 </div>
 <h1 id="suraj-rampure">Suraj Rampure</h1>
 <p><strong><a href="index.html">Home</a></strong>   <a href="teaching/index.html">Teaching</a>   <a href="courses/index.html">Courses</a></p>
 <hr />
 <p>You can email me at <strong>suraj.rampure@berkeley.edu</strong>, connect with me on <a href="http://linkedin.com/in/rampuresuraj">LinkedIn</a>, check out my <a href="http://github.com/surajrampure">GitHub</a>, or look at my <a href="resume.pdf">resume</a>.</p>
 <hr />
-<p><strong>Hey, I’m Suraj!</strong> I’m a junior studying Electrical Engineering and Computer Science at the University of California, Berkeley. My interests lie in education and data science.</p>
-<p>Though I’m a proud Canadian (from Windsor, Ontario), I enjoy rooting for whatever team LeBron plays for — go <del>Cavs</del> Lakers!</p>
+<p><strong>Hey, I’m Suraj!</strong> I’m a rising senior studying Electrical Engineering and Computer Science at the University of California, Berkeley. My interests lie in education and data science.</p>
+<p>I’m a proud Canadian 🇨🇦, from Windsor, Ontario. I follow basketball, and enjoy rooting for whatever team LeBron plays for — go <del>Cavs</del> Lakers!</p>
+<p>Click the picture of me for a surprise.</p>
 <p><br></p>
 <h2 id="currently">Currently…</h2>
-<p><strong>Undergraduate Student Instructor</strong> <br> Spring 2019 is my fourth semester as an Undergraduate Student Instructor, i.e. Teaching Assistant, in the EECS department at UC Berkeley. I’m currently a TA for <a href="http://ds100.org">Data 100</a>, but have also TA’d Data 8 (introductory data science) and CS 61A (introductory programming) in the past. I was a recipient of the <a href="http://gsi.berkeley.edu/programs-services/award-programs/ogsi/ogsi-2018/">outstanding GSI award</a> for the 2017-2018 year, an award that is given annually to the top ~9% of GSIs in each department. My teaching page is linked above.</p>
-<p><strong>Introduction to Mathematical Thinking</strong> <br> Spring 2019 is also the second semester of <a href="http://imt-decal.org">Introduction to Mathematical Thinking</a>, a 2-unit student-run course that I created in order to prepare students for our extremely challenging introductory discrete math and probability course that students need to do well in in order to declare the Computer Science major. You can read the textbook I wrote for it <a href="http://book.imt-decal.org">here</a>.</p>
-<p><strong>Computer Science Mentors</strong> <br> This is my fifth semester as a part of <a href="http://csmberkeley.github.io">Computer Science Mentors</a>, a student-run organization that facilitates small group tutoring for the introductory computer science and electrical engineering courses at Berkeley. CSM’s work is extremely important; some of these courses have enrollments well over 1000 students, and by offering group tutoring, we help make the course smaller and effectively help more students pursue computer science as a major. I’m currently the External Vice President, but served as the CS 70 coordinator for FA17 and SP18.</p>
+<p><strong>Head Undergraduate Student Instructor (Teaching Assistant)</strong> <br> Fall 2019 is my sixth semester as an Undergraduate Student Instructor, i.e. Teaching Assistant, in the EECS (and Statistics) department at UC Berkeley, and fourth as a head TA.</p>
+<ul>
+<li>I’m currently a head TA for <a href="http://ds100.org/fa19">Data 100</a>, but have also TA’d Data 8 (introductory data science), CS 61A (introductory programming), CS 70 (Discrete Math and Probability Theory), and CS 375 (Teaching Computer Science).</li>
+<li>As a TA, I’ve been responsible for leading lab and discussion sections, holding office hours, creating, grading, and organizing logistics for exams, and aiding new TAs pedagogically.</li>
+<li>I was a recipient of the <a href="http://gsi.berkeley.edu/programs-services/award-programs/ogsi/ogsi-2018/">outstanding GSI award</a> for the 2017-2018 year, an award that is given annually to the top ~9% of GSIs in each department, and was also invited to lead the First Time GSI conference held each semester.</li>
+<li>My teaching page is linked above.</li>
+</ul>
+<p><strong>Computer Science Mentors</strong> <br> This is my sixth semester as a part of <a href="http://csmberkeley.github.io">Computer Science Mentors</a>, a student-run organization that facilitates small group tutoring for the introductory computer science and electrical engineering courses at Berkeley. CSM’s work is extremely important; some of these courses have enrollments well over 1000 students, and by offering group tutoring, we help make the course smaller and effectively help more students pursue computer science as a major.</p>
+<ul>
+<li>In Fall 2018 and Spring 2019, I served as the External Vice President, and raised thousands of dollars from corporate sponsors to help run our operations.</li>
+<li>In Fall 2017 and Spring 2018, I served as the course co-ordinator for CS 70 (Discrete Math and Probability Theory). I was responsible for ensuring worksheets were prepared, and for training new CS 70 mentors.</li>
+</ul>
 <p><br></p>
 <h2 id="previously">Previously…</h2>
 <p><strong>McKinsey &amp; Co.</strong> <br> In the summer of 2018, I was a software engineering intern at <a href="mckinsey.com">McKinsey and Company</a> in New York City, where I worked on the Healthcare Analytics and Delivery team. My work was primarily in SQL and JavaScript.</p>
+<p><strong>Introduction to Mathematical Thinking</strong> <br> For two semesters (Fall 2018 / Spring 2019), I created and taught <a href="http://imt-decal.org">Introduction to Mathematical Thinking</a>.</p>
+<ul>
+<li>The goal of the 2-unit, fully student-run course (through the <a href="http://decal.berkeley.edu">DeCal</a> program) was to prepare students for our extremely challenging introductory discrete math and probability course that students need to do well in in order to declare the Computer Science Major.</li>
+<li>The course was fully webcasted; lecture slides, notes, videos, assignments, and quizzes are all available on the course website for public consumption.</li>
+</ul>
 <p><strong>Cal Hacks</strong> <br> In Spring 2017 and Fall 2017, I was a director for <a href="http://calhacks.io">Cal Hacks</a> Berkeley’s largest annual hackathon and one of the largest collegiate hackathons in the nation.</p>
 <p><strong>Data Science for India</strong> <br> In the summer of 2017, I was the director of curriculum development for <a href="http://datascienceforindia.com">Data Science for India</a>, an organization that aims to broaden access to data science skills across India. I helped oversee the creation of a curriculum that was based off of Berkeley courses, but accessible to students with no prior computing knowledge.</p>
 <p><br></p>
