--- a/teaching/index.html
+++ b/teaching/index.html
@@ -28,32 +28,63 @@ Teaching – Suraj Rampure
 <h1 id="teaching-suraj-rampure">Teaching – Suraj Rampure</h1>
 <p><a href="../index.html">Home</a>   <strong><a href="index.html">Teaching</a></strong>   <a href="../courses/index.html">Courses</a></p>
 <hr />
-<h3 id="cs-70-discrete-mathematics-and-probability-theory-site">CS 70 – Discrete Mathematics and Probability Theory (<a href="http://eecs70.org/">site</a>)</h3>
-<p>TA: Summer 2019 (head)</p>
-<ul>
-<li>Discussion: Monday and Tuesday, 4-5PM, Wheeler 30 (103) [<em>shared with Ryan Deng, who will typically teach Wednesday and Thursday</em>]</li>
-<li>OH: Tuesday, 11AM-1PM, Soda 411</li>
-</ul>
-<p>Fill out <a href="http://tinyurl.com/first70disc">this form</a> to tell me more about you!</p>
+<p>Here’s a summary of my teaching history at Berkeley.</p>
+<table>
+<thead>
+<tr class="header">
+<th>Semester</th>
+<th>Course(s) and Roles</th>
+<th>Links</th>
+</tr>
+</thead>
+<tbody>
+<tr class="odd">
+<td>Fall 2019</td>
+<td>Data 100 (head TA)</td>
+<td><a href="#data100">Data 100 Resources</a></td>
+</tr>
+<tr class="even">
+<td>Summer 2019</td>
+<td>CS 70 (head TA), CS 375 (head TA)</td>
+<td></td>
+</tr>
+<tr class="odd">
+<td>Spring 2019</td>
+<td>Data 100 (head TA), IMT DeCal (instructor)</td>
+<td><a href="http://imt-decal.org">IMT DeCal Resources</a></td>
+</tr>
+<tr class="even">
+<td>Fall 2018</td>
+<td>Data 100 (head TA), IMT DeCal (instructor)</td>
+<td></td>
+</tr>
+<tr class="odd">
+<td>Spring 2018</td>
+<td>CS 61A (TA), CS 70 (CSM mentor)</td>
+<td><a href="#cs61a">CS 61A Resources</a></td>
+</tr>
+<tr class="even">
+<td>Fall 2017</td>
+<td>Data 8 (TA), CS 70 (CSM mentor)</td>
+<td><a href="#data8">Data 8 Resources</a></td>
+</tr>
+<tr class="odd">
+<td>Spring 2017</td>
+<td>Data 8 (course tutor), CS 70 (CSM mentor)</td>
+<td></td>
+</tr>
+</tbody>
+</table>
+<p>Below, you’ll find resources I created when helping teach the above courses.</p>
 <p><br></p>
-<p><strong>Resources:</strong></p>
-<ul>
-<li><a href="https://drive.google.com/drive/folders/1-D34Yk71SkphvUK7YATGz1-MHBPlY_VW?usp=sharing">Discussion notes (shared with Ryan Deng)</a></li>
-<li><a href="http://notes.imt-decal.org">Introduction to Mathematical Thinking DeCal notes</a>
-<ul>
-<li>Note: These were written for a different course, but you may still find them useful.</li>
-</ul></li>
-</ul>
 <hr />
+<p><a name = 'data100'></p>
 <h3 id="data-100-principles-and-techniques-of-data-science-site">Data 100 – Principles and Techniques of Data Science (<a href="http://ds100.org">site</a>)</h3>
-<p>TA: Spring 2019 (head), Fall 2018 (head)</p>
-<ul>
-<li>Lab: Tuesday, 12-1PM and 1-2PM, Evans B6 (111 and 115)</li>
-<li>Discussion: Friday, 12-1PM and 1-2PM, Etcheverry (108 and 113)</li>
-<li>OH: Thursday, 12-2PM, Soda 411</li>
-</ul>
+<p></a></p>
+<p>My lab, discussion, and OH times for 100 in Fall 2019 are all TBD.</p>
+<p>Resources from Fall 2019 will go here.</p>
 <p><br></p>
-<p><strong>Resources from this semester:</strong></p>
+<p><strong>Resources from previous semesters:</strong></p>
 <table style="width: 200%">
 <tbody>
 <table style="width:11%;">
@@ -123,11 +154,9 @@ Teaching – Suraj Rampure
 <li><a href="../resources/ds100/infinity_parameters_logistic.html">Parameters Diverging to Infinity in Logistic Regression</a> (SP19)</li>
 </ul>
 <hr />
-<h3 id="cs-198-087-introduction-to-mathematical-thinking-decal-site">CS 198-087 – Introduction to Mathematical Thinking DeCal (<a href="http://imt-decal.org">site</a>)</h3>
-<p>All resources, including the <a href="http://notes.imt-decal.org">notes for the course</a> are on the course website, linked above.</p>
-<hr />
+<p><a name = 'cs61a'></p>
 <h3 id="cs-61a-structure-and-interpretation-of-computer-programs-site">CS 61A – Structure and Interpretation of Computer Programs (<a href="http://cs61a.org">site</a>)</h3>
-<p>TA: Spring 2018</p>
+<p></a></p>
 <p><strong>Videos:</strong></p>
 <ul>
 <li>
@@ -141,11 +170,10 @@ Teaching – Suraj Rampure
 </li>
 </ul>
 <hr />
+<p><a name = 'data8'></p>
 <h3 id="data-8-foundations-of-data-science-site">Data 8 – Foundations of Data Science (<a href="http://data8.org">site</a>)</h3>
-<p>
-TA: Fall 2017, Tutor: Spring 2017
-</p>
-<p><strong>Slides (from Fall 2017):</strong></p>
+<p></a></p>
+<p><strong>Discussion Slides (from Fall 2017):</strong></p>
 <ul>
 <li>
 Week 1 <a href="../resources/data8/pdf/week1.pdf">pdf</a> <a href="../resources/data8/key/week1.key">keynote</a>
@@ -218,3 +246,4 @@ Week 12 <a href="../resources/data8/pdf/week12.pdf">pdf</a> <a href="../resource
 <p>
 <img src="../resources/pictures/d8logo.png" width=100> <br> <em>I also created this logo!</em>
 </p>
+<p><br></p>
