new teaching layout

--- a/courses/index.html
+++ b/courses/index.html
@@ -25,6 +25,7 @@ Courses – Suraj Rampure
 <script type='text/x-mathjax-config'>MathJax.Hub.Config({tex2jax: {inlineMath: [['$','$']]}});</script>
 <script type='text/javascript' src='http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML'></script>
 </head>
+<p><img src='../resources/pictures/miscircle.png' width=100></p>
 <h1 id="courses-suraj-rampure">Courses – Suraj Rampure</h1>
 <p><a href="../index.html">Home</a>   <a href="../teaching/index.html">Teaching</a>   <strong><a href="index.html">Courses</a></strong></p>
 <hr />
