--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <p><br></p>
 <title>
-Suraj Rampure
+Home – Suraj Rampure
 </title>
 <head>
 <meta charset="utf-8">
@@ -26,7 +26,7 @@ Suraj Rampure
 <script type='text/javascript' src='http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML'></script>
 </head>
 <div data-align="center">
-<p><a href="resources/pictures/me_dancing.gif"><img src='resources/pictures/miscircle.png' width=200></a></p>
+<p><a href="resources/pictures/me_dancing.gif"><img src='resources/pictures/miscircle.png' width=100></a></p>
 </div>
 <h1 id="suraj-rampure">Suraj Rampure</h1>
 <p><strong><a href="index.html">Home</a></strong>   <a href="teaching/index.html">Teaching</a>   <a href="courses/index.html">Courses</a></p>
