--- a/teaching/cs61a.html
+++ b/teaching/cs61a.html
@@ -1,6 +1,6 @@
 <p><br></p>
 <title>
-Teaching – Suraj Rampure
+CS 61A Resources – Suraj Rampure
 </title>
 <head>
 <meta charset="utf-8">
@@ -26,53 +26,19 @@ Teaching – Suraj Rampure
 <script type='text/javascript' src='http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML'></script>
 </head>
 <p><img src='../resources/pictures/miscircle.png' width=100></p>
-<h1 id="teaching-suraj-rampure">Teaching – Suraj Rampure</h1>
-<p><a href="../index.html">Home</a>   <strong><a href="index.html">Teaching</a></strong>   <a href="../courses/index.html">Courses</a></p>
+<h1 id="cs-61a-resources-suraj-rampure">CS 61A Resources – Suraj Rampure</h1>
+<p><a href="../index.html">Home</a>   <a href="index.html">Teaching</a>   <a href="../courses/index.html">Courses</a></p>
 <hr />
-<p>Here’s a summary of my teaching history at Berkeley. Click one of the links to be navigated to one of my course specific pages.</p>
-<table>
-<thead>
-<tr class="header">
-<th>Semester</th>
-<th>Course(s) and Roles</th>
-<th>Links</th>
-</tr>
-</thead>
-<tbody>
-<tr class="odd">
-<td>Fall 2019</td>
-<td>Data 100 (head TA)</td>
-<td><a href="ds100.html">Data 100 Resources</a></td>
-</tr>
-<tr class="even">
-<td>Summer 2019</td>
-<td>CS 70 (head TA), CS 375 (head TA)</td>
-<td></td>
-</tr>
-<tr class="odd">
-<td>Spring 2019</td>
-<td>Data 100 (head TA), IMT DeCal (instructor)</td>
-<td><a href="http://imt-decal.org">IMT DeCal Resources</a></td>
-</tr>
-<tr class="even">
-<td>Fall 2018</td>
-<td>Data 100 (head TA), IMT DeCal (instructor)</td>
-<td></td>
-</tr>
-<tr class="odd">
-<td>Spring 2018</td>
-<td>CS 61A (TA), CS 70 (CSM mentor)</td>
-<td><a href="cs61a.html">CS 61A Resources</a></td>
-</tr>
-<tr class="even">
-<td>Fall 2017</td>
-<td>Data 8 (TA), CS 70 (CSM mentor)</td>
-<td><a href="data8.html">Data 8 Resources</a></td>
-</tr>
-<tr class="odd">
-<td>Spring 2017</td>
-<td>Data 8 (course tutor), CS 70 (CSM mentor)</td>
-<td></td>
-</tr>
-</tbody>
-</table>
+<h3 id="cs-61a-structure-and-interpretation-of-computer-programs-site">CS 61A – Structure and Interpretation of Computer Programs (<a href="http://cs61a.org">site</a>)</h3>
+<p>In Spring 2018, I didn’t teach a discussion or lab for 61A. However, I created the following exam walkthrough videos:</p>
+<ul>
+<li>
+<a href="https://www.youtube.com/playlist?list=PLx38hZJ5RLZcnCCRrb_pYP8Kkj7LD3kcZ">Spring 2018 Midterm 2 Walkthrough</a> (SP18)
+</li>
+<li>
+<a href="https://www.youtube.com/playlist?list=PLx38hZJ5RLZeOlFXcB3uxwyAONB4PAMeX">Spring 2018 Midterm 1 Walkthrough</a> (SP18)
+</li>
+<li>
+<a href="https://www.youtube.com/playlist?list=PLx38hZJ5RLZcKnjvoIPAEE_tlu1Uzqs0W">Fall 2017 Final Walkthrough</a> (SP18)
+</li>
+</ul>
