--- a/teaching/ds100.html
+++ b/teaching/ds100.html
@@ -1,6 +1,6 @@
 <p><br></p>
 <title>
-Teaching – Suraj Rampure
+Data 100 Resources – Suraj Rampure
 </title>
 <head>
 <meta charset="utf-8">
@@ -26,53 +26,74 @@ Teaching – Suraj Rampure
 <script type='text/javascript' src='http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML'></script>
 </head>
 <p><img src='../resources/pictures/miscircle.png' width=100></p>
-<h1 id="teaching-suraj-rampure">Teaching – Suraj Rampure</h1>
-<p><a href="../index.html">Home</a>   <strong><a href="index.html">Teaching</a></strong>   <a href="../courses/index.html">Courses</a></p>
+<h1 id="data-100-resources-suraj-rampure">Data 100 Resources – Suraj Rampure</h1>
+<p><a href="../index.html">Home</a>   <a href="index.html">Teaching</a>   <a href="../courses/index.html">Courses</a></p>
 <hr />
-<p>Here’s a summary of my teaching history at Berkeley. Click one of the links to be navigated to one of my course specific pages.</p>
-<table>
+<h2 id="fall-2019">Fall 2019</h2>
+<ul>
+<li><strong>Lab:</strong> Monday, 3-4PM, Evans B6 (118)</li>
+<li><strong>Disc:</strong> Wednesday, 3-4PM, Etcheverry 3107 (118A)</li>
+<li><strong>Office Hours:</strong> Tuesday, 1-3PM, Evans 426 (subject to change, check course website)</li>
+<li><strong>Anonymous Feedback:</strong> Fill out <a href="https://forms.gle/DC3GAqTbV6u8w9nZ6">this form</a> to give me anonymous feedback on my teaching.</li>
+</ul>
+<p>Please fill out <a href="http://tinyurl.com/firstdiscdata">this form</a> to tell me a bit about yourself.</p>
+<table style="width:11%;">
+<colgroup>
+<col style="width: 5%" />
+<col style="width: 5%" />
+</colgroup>
 <thead>
 <tr class="header">
-<th>Semester</th>
-<th>Course(s) and Roles</th>
-<th>Links</th>
+<th>Week</th>
+<th>                                                                                                                                                                                   </th>
 </tr>
 </thead>
 <tbody>
 <tr class="odd">
-<td>Fall 2019</td>
-<td>Data 100 (head TA)</td>
-<td><a href="ds100.html">Data 100 Resources</a></td>
-</tr>
-<tr class="even">
-<td>Summer 2019</td>
-<td>CS 70 (head TA), CS 375 (head TA)</td>
-<td></td>
-</tr>
-<tr class="odd">
-<td>Spring 2019</td>
-<td>Data 100 (head TA), IMT DeCal (instructor)</td>
-<td><a href="http://imt-decal.org">IMT DeCal Resources</a></td>
-</tr>
-<tr class="even">
-<td>Fall 2018</td>
-<td>Data 100 (head TA), IMT DeCal (instructor)</td>
-<td></td>
-</tr>
-<tr class="odd">
-<td>Spring 2018</td>
-<td>CS 61A (TA), CS 70 (CSM mentor)</td>
-<td><a href="cs61a.html">CS 61A Resources</a></td>
-</tr>
-<tr class="even">
-<td>Fall 2017</td>
-<td>Data 8 (TA), CS 70 (CSM mentor)</td>
-<td><a href="data8.html">Data 8 Resources</a></td>
-</tr>
-<tr class="odd">
-<td>Spring 2017</td>
-<td>Data 8 (course tutor), CS 70 (CSM mentor)</td>
-<td></td>
+<td>2</td>
+<td>marked-up worksheet, video (coming soon)</td>
 </tr>
 </tbody>
 </table>
+<p><br><br><br><br><br></p>
+<h2 id="archive-from-previous-semesters">Archive from Previous Semesters</h2>
+<p>Here are some of the resources I created over the past few semesters for Data 100. I will re-link anything that becomes relevant under “Fall 2019”, so don’t worry about searching through this if you’re a current student.</p>
+<p><strong>Discussion Resources:</strong></p>
+<ul>
+<li>Week 1: <a href="../resources/ds100/sp19/disc01_slides.pdf">slides</a>, <a href="../resources/ds100/sp19/disc01_markup.pdf">marked-up worksheet</a></li>
+<li>Week 3: <a href="../resources/ds100/sp19/disc03_markup.pdf">marked-up worksheet</a></li>
+<li>Week 5: <a href="../resources/ds100/sp19/disc05_markup.pdf">marked-up worksheet</a></li>
+<li>Week 6: <a href="../resources/ds100/sp19/disc06_slides.pdf">discussion slides</a>, <a href="../resources/ds100/sp19/disc06_markup.pdf">marked-up worksheet</a></li>
+<li>Week 10: <a href="../resources/ds100/sp19/disc10_notes.pdf">notes</a></li>
+</ul>
+<p><strong>Discussion Walkthrough Videos:</strong></p>
+<ul>
+<li><a href="https://www.youtube.com/watch?v=Rigtuige5bU&amp;feature=youtu.be">Discussion 6 Walkthrough</a> (SP19)</li>
+<li><a href="https://www.youtube.com/watch?v=5-hsWWR3MXY&amp;feature=youtu.be">Discussion 7 Walkthrough</a> (SP19)</li>
+<li><a href="https://www.youtube.com/watch?v=MDtI9yYJfn0&amp;feature=youtu.be">Discussion 8 Walkthrough</a> (SP19)</li>
+<li><a href="https://www.youtube.com/watch?v=FRviVt0NNhE&amp;feature=youtu.be">Discussion 9 Walkthrough</a> (SP19)</li>
+<li><a href="https://www.youtube.com/watch?v=EfK_m1jCerM&amp;feature=youtu.be">Discussion 12 Walkthrough</a> (SP19)</li>
+</ul>
+<p><strong>Exam Walkthrough Videos:</strong></p>
+<ul>
+<li><a href="https://www.youtube.com/playlist?list=PLQCcNQgUcDfqAD1D9g9P9SUYo0tdXQpSY">Fall 2017 Midterm Walkthrough</a> (FA18)</li>
+<li><a href="https://www.youtube.com/watch?v=5JU0Xe46DnA&amp;list=PLQCcNQgUcDfrBO7dpL-Pv6e0LYGeqsHKr">Spring 2018 Final Walkthrough</a> (FA18)</li>
+<li><a href="https://www.youtube.com/watch?v=7UVjFuRTHMc">Summer 2019 Midterm Walkthrough</a> (SU19)</li>
+</ul>
+<p><strong>Review Slides</strong>:</p>
+<ul>
+<li><a href="../resources/ds100/midterm2review.pdf">Midterm 2 Review Slides</a> (SP19)</li>
+<li><a href="http://www.surajrampure.com/resources/ds100/final_review_regression.pdf">Final Review Slides (regression, BV, regularization)</a> (<a href="http://www.surajrampure.com/resources/ds100/final_review_exam_markup.pdf">exam mark-up</a>) (SP19)</li>
+<li><a href="http://www.surajrampure.com/resources/ds100/final_review_classification.pdf">Final Review Slides (classification, logistic regression)</a> (SP19)</li>
+<li><a href="http://www.surajrampure.com/resources/ds100/final_review_bootstrap_sampling.pdf">Final Review Slides (sampling, bootstrapping, confidence intervals)</a> (<a href="http://www.surajrampure.com/resources/ds100/final_review_bootstrap_notebook.html">notebook</a>) (<a href="http://www.surajrampure.com/resources/ds100/final_review_probability.pdf">worksheet</a>) (SP19)</li>
+</ul>
+<p><strong>Other Notes</strong>:</p>
+<ul>
+<li><a href="../resources/ds100/regression-connections.html">Connections between different approaches to linear regression</a></li>
+<li><a href="../resources/ds100/sigmoid.html">Derivation of the Sigmoid Function</a></li>
+<li><a href="../resources/ds100/infinity_parameters_logistic.html">Parameters Diverging to Infinity in Logistic Regression</a></li>
+<li><a href="../resources/ds100/KDE.html">Walkthrough notebook on Kernel Density Estimation</a> (<a href="../resources/ds100/KDE.ipynb">raw</a>)</li>
+<li><a href="../resources/ds100/Transformations.html">Notebook on Transformations</a> (<a href="../resources/ds100/Transformations.ipynb">raw</a>)</li>
+<li><a href="../resources/ds100/eigen-singular.html">Note on Eigenvalues vs. Singular Values</a></li>
+</ul>
+<p><br></p>
