--- a/teaching/data8.html
+++ b/teaching/data8.html
@@ -1,6 +1,6 @@
 <p><br></p>
 <title>
-Teaching – Suraj Rampure
+Data 8 Resources – Suraj Rampure
 </title>
 <head>
 <meta charset="utf-8">
@@ -26,53 +26,81 @@ Teaching – Suraj Rampure
 <script type='text/javascript' src='http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML'></script>
 </head>
 <p><img src='../resources/pictures/miscircle.png' width=100></p>
-<h1 id="teaching-suraj-rampure">Teaching – Suraj Rampure</h1>
-<p><a href="../index.html">Home</a>   <strong><a href="index.html">Teaching</a></strong>   <a href="../courses/index.html">Courses</a></p>
+<h1 id="data-8-resources-suraj-rampure">Data 8 Resources – Suraj Rampure</h1>
+<p><a href="../index.html">Home</a>   <a href="index.html">Teaching</a>   <a href="../courses/index.html">Courses</a></p>
 <hr />
-<p>Here’s a summary of my teaching history at Berkeley. Click one of the links to be navigated to one of my course specific pages.</p>
-<table>
-<thead>
-<tr class="header">
-<th>Semester</th>
-<th>Course(s) and Roles</th>
-<th>Links</th>
-</tr>
-</thead>
-<tbody>
-<tr class="odd">
-<td>Fall 2019</td>
-<td>Data 100 (head TA)</td>
-<td><a href="ds100.html">Data 100 Resources</a></td>
-</tr>
-<tr class="even">
-<td>Summer 2019</td>
-<td>CS 70 (head TA), CS 375 (head TA)</td>
-<td></td>
-</tr>
-<tr class="odd">
-<td>Spring 2019</td>
-<td>Data 100 (head TA), IMT DeCal (instructor)</td>
-<td><a href="http://imt-decal.org">IMT DeCal Resources</a></td>
-</tr>
-<tr class="even">
-<td>Fall 2018</td>
-<td>Data 100 (head TA), IMT DeCal (instructor)</td>
-<td></td>
-</tr>
-<tr class="odd">
-<td>Spring 2018</td>
-<td>CS 61A (TA), CS 70 (CSM mentor)</td>
-<td><a href="cs61a.html">CS 61A Resources</a></td>
-</tr>
-<tr class="even">
-<td>Fall 2017</td>
-<td>Data 8 (TA), CS 70 (CSM mentor)</td>
-<td><a href="data8.html">Data 8 Resources</a></td>
-</tr>
-<tr class="odd">
-<td>Spring 2017</td>
-<td>Data 8 (course tutor), CS 70 (CSM mentor)</td>
-<td></td>
-</tr>
-</tbody>
-</table>
+<h3 id="data-8-foundations-of-data-science-site">Data 8 – Foundations of Data Science (<a href="http://data8.org">site</a>)</h3>
+<p><strong>Discussion Slides (from Fall 2017):</strong></p>
+<ul>
+<li>
+Week 1 <a href="../resources/data8/pdf/week1.pdf">pdf</a> <a href="../resources/data8/key/week1.key">keynote</a>
+</li>
+<li>
+Week 2 <a href="../resources/data8/pdf/week2.pdf">pdf</a> <a href="../resources/data8/key/week2.key">keynote</a>
+</li>
+<li>
+Week 3 <a href="../resources/data8/pdf/week3.pdf">pdf</a> <a href="../resources/data8/key/week3.key">keynote</a>
+</li>
+<li>
+Week 4 <a href="../resources/data8/pdf/week4.pdf">pdf</a> <a href="../resources/data8/key/week4.key">keynote</a>
+</li>
+<li>
+Week 5 <a href="../resources/data8/pdf/week5.pdf">pdf</a> <a href="../resources/data8/key/week5.key">keynote</a>
+</li>
+<li>
+Week 6 <a href="../resources/data8/pdf/week6.pdf">pdf</a> <a href="../resources/data8/key/week6.key">keynote</a>
+</li>
+<li>
+Week 7 (no slides)
+</li>
+<li>
+Week 8 <a href="../resources/data8/pdf/week8.pdf">pdf</a> <a href="../resources/data8/key/week8.key">keynote</a>
+</li>
+<li>
+Week 9 <a href="../resources/data8/pdf/week9.pdf">pdf</a> <a href="../resources/data8/key/week9.key">keynote</a>
+</li>
+<li>
+Week 10 <a href="../resources/data8/pdf/week10.pdf">pdf</a> <a href="../resources/data8/key/week10.key">keynote</a>
+</li>
+<li>
+Week 11 <a href="../resources/data8/pdf/week11.pdf">pdf</a> <a href="../resources/data8/key/week11.key">keynote</a>
+</li>
+<li>
+Week 12 <a href="../resources/data8/pdf/week12.pdf">pdf</a> <a href="../resources/data8/key/week12.key">keynote</a>
+</li>
+</ul>
+<p><strong>Videos:</strong></p>
+<ul>
+<li>
+<a href="https://www.youtube.com/watch?v=7P6zJmMV7AE">Histograms Midterm Review</a> (FA17)
+</li>
+<li>
+<a href="https://www.youtube.com/watch?v=mdHvHv_lqLk">Summer 2017 Midterm Walkthrough</a> (FA17)
+</li>
+<li>
+<a href="https://www.youtube.com/watch?v=rZfGEibJ0Og&amp;feature=youtu.be">Spring 2017 Final Walkthrough</a> (FA17)
+</li>
+<li>
+<a href="https://www.youtube.com/watch?v=LPMzXlYf8n8">Spring 2017 Midterm Walkthrough</a> (SP17)
+</li>
+<li>
+<a href="https://www.youtube.com/watch?v=LR8Zfa1JovA">Fall 2016 Midterm Walkthrough</a> (SP17)
+</li>
+<li>
+<a href="https://www.youtube.com/watch?v=oaNolUkZTL0">Spring 2016 Final Walkthrough</a> (SP17)
+</li>
+</ul>
+<p><strong>Notes and other resources:</strong></p>
+<ul>
+<li>
+<a href="../resources/data8/tvd-walkthrough.html">Total Variation Distance – A Walkthrough</a> (FA17)
+</li>
+<li>
+<a href="../resources/data8/ch2-causation.pdf">Causality Notes (Vasilis)</a> (SP17)
+</li>
+</ul>
+<br>
+<p>
+<img src="../resources/pictures/d8logo.png" width=100> <br> <em>I also created this logo!</em>
+</p>
+<p><br></p>
