--- a/teaching/ds100.html
+++ b/teaching/ds100.html
@@ -51,7 +51,7 @@ Data 100 Resources – Suraj Rampure
 <tbody>
 <tr class="odd">
 <td>2</td>
-<td><a href="../resources/ds100/fa19/disc2_slides.pdf">slides</a>, <a href="../resources/ds100/fa19/disc2_markup.pdf">marked-up worksheet</a>, video</td>
+<td><a href="../resources/ds100/fa19/disc2_slides.pdf">slides</a>, <a href="../resources/ds100/fa19/disc2_markup.pdf">marked-up worksheet</a>, <a href="https://youtu.be/0CiUCgSr-Mg">video</a></td>
 </tr>
 </tbody>
 </table>
