--- a/teaching/ds100.html
+++ b/teaching/ds100.html
@@ -53,6 +53,10 @@ Data 100 Resources – Suraj Rampure
 <td>2</td>
 <td><a href="../resources/ds100/fa19/disc2_slides.pdf">slides</a>, <a href="../resources/ds100/fa19/disc2_markup.pdf">marked-up worksheet</a>, <a href="https://youtu.be/0CiUCgSr-Mg">video</a></td>
 </tr>
+<tr class="even">
+<td>3</td>
+<td><a href="../resources/ds100/fa19/disc3_slides.pdf">slides</a>, <a href="../resources/ds100/fa19/disc3_markup.pdf">marked-up worksheet</a>, video</td>
+</tr>
 </tbody>
 </table>
 <p><br><br><br><br><br></p>
