--- a/teaching/ds100.html
+++ b/teaching/ds100.html
@@ -55,7 +55,11 @@ Data 100 Resources – Suraj Rampure
 </tr>
 <tr class="even">
 <td>3</td>
-<td><a href="../resources/ds100/fa19/disc3_slides.pdf">slides</a>, <a href="../resources/ds100/fa19/disc3_markup.pdf">marked-up worksheet</a>, video</td>
+<td><a href="../resources/ds100/fa19/disc3_slides.pdf">slides</a>, <a href="../resources/ds100/fa19/disc3_markup.pdf">marked-up worksheet</a>, <a href="https://www.youtube.com/watch?v=1NKaM-bHKWk&amp;feature=youtu.be">video</a></td>
+</tr>
+<tr class="odd">
+<td>4</td>
+<td>video</td>
 </tr>
 </tbody>
 </table>
