--- a/teaching/ds100.html
+++ b/teaching/ds100.html
@@ -33,7 +33,7 @@ Data 100 Resources – Suraj Rampure
 <ul>
 <li><strong>Lab:</strong> Monday, 3-4PM, Evans B6 (118)</li>
 <li><strong>Disc:</strong> Wednesday, 3-4PM, Etcheverry 3107 (118A)</li>
-<li><strong>Office Hours:</strong> Tuesday, 1-3PM, Evans 426 (subject to change, check course website)</li>
+<li><strong>Office Hours:</strong> Tuesday, 2-3PM (Jacobs 220); Thursday 12-1PM (Evans 426)</li>
 <li><strong>Anonymous Feedback:</strong> Fill out <a href="https://forms.gle/DC3GAqTbV6u8w9nZ6">this form</a> to give me anonymous feedback on my teaching.</li>
 </ul>
 <p>Please fill out <a href="http://tinyurl.com/firstdiscdata">this form</a> to tell me a bit about yourself.</p>
