--- a/teaching/ds100.html
+++ b/teaching/ds100.html
@@ -59,7 +59,11 @@ Data 100 Resources – Suraj Rampure
 </tr>
 <tr class="odd">
 <td>4</td>
-<td>video</td>
+<td>N/A</td>
+</tr>
+<tr class="even">
+<td>5</td>
+<td><a href="http://www.surajrampure.com/resources/ds100/Transformations.html">Note on Transformations</a>, <a href="http://www.surajrampure.com/resources/ds100/KDE.html">Note on Kernel Density Estimation</a></td>
 </tr>
 </tbody>
 </table>
