--- a/teaching/ds100.html
+++ b/teaching/ds100.html
@@ -63,7 +63,7 @@ Data 100 Resources – Suraj Rampure
 </tr>
 <tr class="even">
 <td>5</td>
-<td><a href="http://www.surajrampure.com/resources/ds100/Transformations.html">Note on Transformations</a>, <a href="http://www.surajrampure.com/resources/ds100/KDE.html">Note on Kernel Density Estimation</a></td>
+<td><a href="../resources/ds100/fa19/disc5_markup.pdf">marked-up worksheet</a>, video, <a href="http://www.surajrampure.com/resources/ds100/Transformations.html">note on transformations</a>, <a href="http://www.surajrampure.com/resources/ds100/KDE.html">note on Kernel Density Estimation</a></td>
 </tr>
 </tbody>
 </table>
