--- a/teaching/ds100.html
+++ b/teaching/ds100.html
@@ -65,8 +65,24 @@ Data 100 Resources – Suraj Rampure
 <td>5</td>
 <td><a href="../resources/ds100/fa19/disc5_markup.pdf">marked-up worksheet</a>, video, <a href="http://www.surajrampure.com/resources/ds100/Transformations.html">note on transformations</a>, <a href="http://www.surajrampure.com/resources/ds100/KDE.html">note on Kernel Density Estimation</a></td>
 </tr>
+<tr class="odd">
+<td>6</td>
+<td><a href="https://www.youtube.com/watch?v=3VWzyIhejuE&amp;feature=youtu.be">video</a></td>
+</tr>
 </tbody>
 </table>
+<p><br></p>
+<p><strong>Review Slides:</strong></p>
+<ul>
+<li><a href="../resources/ds100/fa19/loss-and-risk-mt1.pdf">Loss and Risk Midterm 1 Review</a></li>
+</ul>
+<p><strong>Exam Walkthrough Videos:</strong></p>
+<ul>
+<li><a href="https://www.youtube.com/playlist?list=PLQCcNQgUcDfqAD1D9g9P9SUYo0tdXQpSY">Fall 2017 Midterm Walkthrough</a> (FA18)</li>
+<li><a href="https://www.youtube.com/watch?v=5JU0Xe46DnA&amp;list=PLQCcNQgUcDfrBO7dpL-Pv6e0LYGeqsHKr">Spring 2018 Final Walkthrough</a> (FA18)</li>
+<li><a href="https://www.youtube.com/watch?v=7UVjFuRTHMc">Summer 2019 Midterm Walkthrough</a> (SU19)</li>
+<li><a href="https://www.youtube.com/watch?v=F3tu9PZHhyU&amp;feature=youtu.be">Spring 2019 Midterm 1 Walkthrough</a> (FA19)</li>
+</ul>
 <p><br><br><br><br><br></p>
 <h2 id="archive-from-previous-semesters">Archive from Previous Semesters</h2>
 <p>Here are some of the resources I created over the past few semesters for Data 100. I will re-link anything that becomes relevant under “Fall 2019”, so don’t worry about searching through this if you’re a current student.</p>
@@ -85,12 +101,6 @@ Data 100 Resources – Suraj Rampure
 <li><a href="https://www.youtube.com/watch?v=MDtI9yYJfn0&amp;feature=youtu.be">Discussion 8 Walkthrough</a> (SP19)</li>
 <li><a href="https://www.youtube.com/watch?v=FRviVt0NNhE&amp;feature=youtu.be">Discussion 9 Walkthrough</a> (SP19)</li>
 <li><a href="https://www.youtube.com/watch?v=EfK_m1jCerM&amp;feature=youtu.be">Discussion 12 Walkthrough</a> (SP19)</li>
-</ul>
-<p><strong>Exam Walkthrough Videos:</strong></p>
-<ul>
-<li><a href="https://www.youtube.com/playlist?list=PLQCcNQgUcDfqAD1D9g9P9SUYo0tdXQpSY">Fall 2017 Midterm Walkthrough</a> (FA18)</li>
-<li><a href="https://www.youtube.com/watch?v=5JU0Xe46DnA&amp;list=PLQCcNQgUcDfrBO7dpL-Pv6e0LYGeqsHKr">Spring 2018 Final Walkthrough</a> (FA18)</li>
-<li><a href="https://www.youtube.com/watch?v=7UVjFuRTHMc">Summer 2019 Midterm Walkthrough</a> (SU19)</li>
 </ul>
 <p><strong>Review Slides</strong>:</p>
 <ul>
