--- a/teaching/ds100.html
+++ b/teaching/ds100.html
@@ -63,11 +63,11 @@ Data 100 Resources – Suraj Rampure
 </tr>
 <tr class="even">
 <td>5</td>
-<td><a href="../resources/ds100/fa19/disc5_markup.pdf">marked-up worksheet</a>, video, <a href="http://www.surajrampure.com/resources/ds100/Transformations.html">note on transformations</a>, <a href="http://www.surajrampure.com/resources/ds100/KDE.html">note on Kernel Density Estimation</a></td>
+<td><a href="../resources/ds100/fa19/disc5_markup.pdf">marked-up worksheet</a>, <a href="https://youtu.be/fJHgr4ttMPk">video</a>, <a href="http://www.surajrampure.com/resources/ds100/Transformations.html">note on transformations</a></td>
 </tr>
 <tr class="odd">
 <td>6</td>
-<td><a href="https://www.youtube.com/watch?v=3VWzyIhejuE&amp;feature=youtu.be">video</a></td>
+<td><a href="https://www.youtube.com/watch?v=3VWzyIhejuE&amp;feature=youtu.be">video</a>, <a href="http://www.surajrampure.com/resources/ds100/KDE.html">note on Kernel Density Estimation</a></td>
 </tr>
 </tbody>
 </table>
