--- a/teaching/ds100.html
+++ b/teaching/ds100.html
@@ -69,6 +69,10 @@ Data 100 Resources – Suraj Rampure
 <td>6</td>
 <td><a href="https://www.youtube.com/watch?v=3VWzyIhejuE&amp;feature=youtu.be">video</a>, <a href="http://www.surajrampure.com/resources/ds100/KDE.html">note on Kernel Density Estimation</a></td>
 </tr>
+<tr class="even">
+<td>7</td>
+<td><a href="../resources/ds100/fa19/pca-demo.html">note on PCA</a> (<a href="../resources/ds100/fa19/pca-demo-raw.ipynb">raw</a>)</td>
+</tr>
 </tbody>
 </table>
 <p><br></p>
