--- a/teaching/ds100.html
+++ b/teaching/ds100.html
@@ -73,6 +73,10 @@ Data 100 Resources – Suraj Rampure
 <td>7</td>
 <td><a href="../resources/ds100/fa19/pca-demo.html">note on PCA</a> (<a href="../resources/ds100/fa19/pca-demo-raw.ipynb">raw</a>)</td>
 </tr>
+<tr class="odd">
+<td>8</td>
+<td><a href=".../resources/ds100/fa19/disc8_slides.pdf">slides</a>, <a href="../resources/ds100/fa19/disc8_notebook.html">supplemental notebook</a> (<a href="../resources/ds100/fa19/disc8-raw.ipynb">raw</a>)</td>
+</tr>
 </tbody>
 </table>
 <p><br></p>
