--- a/teaching/ds100.html
+++ b/teaching/ds100.html
@@ -75,7 +75,7 @@ Data 100 Resources – Suraj Rampure
 </tr>
 <tr class="odd">
 <td>8</td>
-<td><a href=".../resources/ds100/fa19/disc8_slides.pdf">slides</a>, <a href="../resources/ds100/fa19/disc8_notebook.html">supplemental notebook</a> (<a href="../resources/ds100/fa19/disc8-raw.ipynb">raw</a>)</td>
+<td><a href="../resources/ds100/fa19/disc8_slides.pdf">slides</a>, <a href="../resources/ds100/fa19/disc8_notebook.html">supplemental notebook</a> (<a href="../resources/ds100/fa19/disc8-raw.ipynb">raw</a>)</td>
 </tr>
 </tbody>
 </table>
