--- a/teaching/ds100.html
+++ b/teaching/ds100.html
@@ -77,6 +77,10 @@ Data 100 Resources – Suraj Rampure
 <td>8</td>
 <td><a href="../resources/ds100/fa19/disc8_slides.pdf">slides</a>, <a href="../resources/ds100/fa19/disc8_notebook.html">supplemental notebook</a> (<a href="../resources/ds100/fa19/disc8-raw.ipynb">raw</a>)</td>
 </tr>
+<tr class="even">
+<td>9</td>
+<td><a href="../resources/ds100/fa19/disc9_slides.pdf">slides</a>, <a href="../resources/ds100/fa19/disc9_markup.pdf">marked-up worksheet</a></td>
+</tr>
 </tbody>
 </table>
 <p><br></p>
