--- a/teaching/ds100.html
+++ b/teaching/ds100.html
@@ -81,6 +81,10 @@ Data 100 Resources – Suraj Rampure
 <td>9</td>
 <td><a href="../resources/ds100/fa19/disc9_slides.pdf">slides</a>, <a href="../resources/ds100/fa19/disc9_markup.pdf">marked-up worksheet</a></td>
 </tr>
+<tr class="odd">
+<td>10</td>
+<td><a href="../resources/ds100/fa19/disc10_slides.pdf">slides</a></td>
+</tr>
 </tbody>
 </table>
 <p><br></p>
