--- a/teaching/ds100.html
+++ b/teaching/ds100.html
@@ -36,7 +36,6 @@ Data 100 Resources – Suraj Rampure
 <li><strong>Office Hours:</strong> Tuesday, 2-3PM (Jacobs 220); Thursday 12-1PM (Evans 426)</li>
 <li><strong>Anonymous Feedback:</strong> Fill out <a href="https://forms.gle/DC3GAqTbV6u8w9nZ6">this form</a> to give me anonymous feedback on my teaching.</li>
 </ul>
-<p>Please fill out <a href="http://tinyurl.com/firstdiscdata">this form</a> to tell me a bit about yourself.</p>
 <table style="width:11%;">
 <colgroup>
 <col style="width: 5%" />
@@ -85,6 +84,10 @@ Data 100 Resources – Suraj Rampure
 <td>10</td>
 <td><a href="../resources/ds100/fa19/disc10_slides.pdf">slides</a></td>
 </tr>
+<tr class="even">
+<td>11</td>
+<td><a href="../resources/ds100/fa19/disc11_slides.pdf">slides</a>, <a href="../resources/ds100/fa19/disc11_markup.pdf">marked-up worksheet</a></td>
+</tr>
 </tbody>
 </table>
 <p><br></p>
@@ -98,6 +101,10 @@ Data 100 Resources – Suraj Rampure
 <li><a href="https://www.youtube.com/watch?v=5JU0Xe46DnA&amp;list=PLQCcNQgUcDfrBO7dpL-Pv6e0LYGeqsHKr">Spring 2018 Final Walkthrough</a> (FA18)</li>
 <li><a href="https://www.youtube.com/watch?v=7UVjFuRTHMc">Summer 2019 Midterm Walkthrough</a> (SU19)</li>
 <li><a href="https://www.youtube.com/watch?v=F3tu9PZHhyU&amp;feature=youtu.be">Spring 2019 Midterm 1 Walkthrough</a> (FA19)</li>
+</ul>
+<p><strong>Lectures:</strong></p>
+<ul>
+<li>Lecture 20 (Logistic Regression, Cross Entropy Loss, Classification): <a href="https://docs.google.com/presentation/d/1HM3WU4a_lzYa5iz_S_XhsLC9NXy5y45h33Xm79_AStQ/edit?pli=1&amp;ts=5dc10004#slide=id.g4df0212f45_0_0">slides</a> <a href="https://www.youtube.com/watch?v=ky8ESSqw0Pc">webcast</a></li>
 </ul>
 <p><br><br><br><br><br></p>
 <h2 id="archive-from-previous-semesters">Archive from Previous Semesters</h2>
