--- a/teaching/ds100.html
+++ b/teaching/ds100.html
@@ -78,7 +78,7 @@ Data 100 Resources – Suraj Rampure
 </tr>
 <tr class="even">
 <td>9</td>
-<td><a href="../resources/ds100/fa19/disc9_slides.pdf">slides</a>, <a href="../resources/ds100/fa19/disc9_markup.pdf">marked-up worksheet</a></td>
+<td><a href="../resources/ds100/fa19/disc9_slides.pdf">slides</a>, <a href="../resources/ds100/fa19/disc9_markup.pdf">marked-up worksheet</a>, <a href="https://youtu.be/xC_JoI6gob8">video</a></td>
 </tr>
 <tr class="odd">
 <td>10</td>
@@ -86,7 +86,15 @@ Data 100 Resources – Suraj Rampure
 </tr>
 <tr class="even">
 <td>11</td>
-<td><a href="../resources/ds100/fa19/disc11_slides.pdf">slides</a>, <a href="../resources/ds100/fa19/disc11_markup.pdf">marked-up worksheet</a></td>
+<td><a href="../resources/ds100/fa19/disc11_slides.pdf">slides</a>, <a href="../resources/ds100/fa19/disc11_markup.pdf">marked-up worksheet</a>, <a href="https://youtu.be/hC1-faGXxjQ">video</a></td>
+</tr>
+<tr class="odd">
+<td>12</td>
+<td>N/A (midterm)</td>
+</tr>
+<tr class="even">
+<td>13</td>
+<td><a href="../resources/ds100/fa19/disc13_slides.pdf">slides</a></td>
 </tr>
 </tbody>
 </table>
@@ -101,6 +109,7 @@ Data 100 Resources – Suraj Rampure
 <li><a href="https://www.youtube.com/watch?v=5JU0Xe46DnA&amp;list=PLQCcNQgUcDfrBO7dpL-Pv6e0LYGeqsHKr">Spring 2018 Final Walkthrough</a> (FA18)</li>
 <li><a href="https://www.youtube.com/watch?v=7UVjFuRTHMc">Summer 2019 Midterm Walkthrough</a> (SU19)</li>
 <li><a href="https://www.youtube.com/watch?v=F3tu9PZHhyU&amp;feature=youtu.be">Spring 2019 Midterm 1 Walkthrough</a> (FA19)</li>
+<li><a href="https://youtu.be/-XCRQ6CKNb0">Spring 2019 Midterm 2 Walkthrough</a> (FA19)</li>
 </ul>
 <p><strong>Lectures:</strong></p>
 <ul>
